new proj/src/objects/GE_ES_Checklist_Item_Submission__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_Comments__c</fullName>
        <description>This field is used to hold any comments.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Deviation_Level__c</fullName>
        <formula>text(GE_ES_Risk_Factor_Deviation__r.GE_ES_Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deviation Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Deviation_Value__c</fullName>
        <formula>GE_ES_Risk_Factor_Deviation__r.GE_ES_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deviation Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_LastStatusChangeDate__c</fullName>
        <label>LastStatusChangeDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity related to the Risk Check list Item. This Look up helps to to avoid additional SOQL queries.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Checklist Item Submissions</relationshipLabel>
        <relationshipName>Checklist_Item_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Risk_Checklist_Item__c</fullName>
        <label>Risk Checklist Item</label>
        <referenceTo>GE_ES_Risk_Checklist_Item__c</referenceTo>
        <relationshipLabel>Checklist Item Submissions</relationshipLabel>
        <relationshipName>GE_ES_Checklist_Item_Submissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_ES_Risk_Factor_Deviation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Factor Deviation</label>
        <referenceTo>GE_ES_Risk_Factor_Deviation__c</referenceTo>
        <relationshipLabel>Checklist Item Submissions</relationshipLabel>
        <relationshipName>Checklist_Item_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Risk_Factor_Name__c</fullName>
        <formula>GE_ES_Risk_Checklist_Item__r.GE_RF_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Factor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Submission_Date__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_ES_Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Checklist_Item_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Oppty_Tier_1__c</fullName>
        <formula>GE_ES_Risk_Checklist_Item__r.Oppty_Tier_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Tier 1</label>
        <type>Text</type>
    </fields>
    <label>Checklist Item Submission</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Checklist Item Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Item Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>